<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.logn.titlebar.TitleBar
        android:id="@+id/title_bar_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        app:leftText="@string/back"
        app:titleBarColor="@color/colorGrayBackGround"
        app:titleBarText="@string/setting">

    </com.logn.titlebar.TitleBar>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title_bar_setting"
        android:background="@color/colorBlackText" />


    <CheckBox
        android:id="@+id/setting_checkbox_bgm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:text="@string/music_on" />

</LinearLayout>