<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logn.gobanggame.HomeViewActivity">

    <com.logn.titlebar.TitleBar
        android:id="@+id/title_bar_home"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        app:titleBarColor="@color/colorGrayBackGround"
        app:titleBarText="@string/app_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title_bar_home"
        android:background="@color/colorBlackText" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_bar_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_bar_home"
        android:gravity="center"
        android:orientation="vertical">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_home_p2p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/person2person"
            android:textColor="@color/colorGrayBackGround" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_home_p2m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/person2machine"
            android:textColor="@color/colorGrayBackGround" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_home_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/history"
            android:textColor="@color/colorGrayBackGround" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_home_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/setting"
            android:textColor="@color/colorGrayBackGround" />
    </LinearLayout>


</RelativeLayout>
