<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.logn.titlebar.TitleBar
        android:id="@+id/history_title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        app:leftText="@string/back"
        app:leftTextColor="@color/colorGrayBackGround"
        app:rightText="@string/iCloud"
        app:rightTextColor="@color/colorGrayBackGround"
        app:titleBarColor="@color/colorGrayBackGround"
        app:titleBarText="@string/history">

    </com.logn.titlebar.TitleBar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#77000000" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>